Fixed and closed issue #113.

--- a/_pages/dept/prosecutor/home.html
+++ b/_pages/dept/prosecutor/home.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Prosecutor
+title: Prosecuting Attorney
 permalink: /prosecutor/
 ---
 
@@ -37,12 +37,10 @@ permalink: /prosecutor/
                   <li>Idaho Department of Fish and Game</li>
                 </ul>
               </li>
-              <li>Juvenile cases regardless of the investigating agency.
-                <ul>
-                  <li>Child Protection cases</li>
-                  <li>Involuntary mental hospitalizations</li>
-                </ul>
-              </li>
+              <li>Juvenile cases regardless of the investigating agency</li>
+              <li>Child Protection cases</li>
+              <li>Involuntary mental hospitalizations</li>
+              <li>County civil legal matters</li>
             </ul>
           </p>
           <p>
@@ -72,10 +70,12 @@ permalink: /prosecutor/
         <h3 class="panel-title text-center">Our Services</h3>
       </div>
       <ul class="list-group">
+        <li class="list-group-item text-center">Felonies</li>
+        <li class="list-group-item text-center">Misdemeanor and Infractions Cases (State and County agencies</li>
+        <li class="list-group-item text-center">Juvenile Cases</li>
         <li class="list-group-item text-center">Child Protection Cases</li>
         <li class="list-group-item text-center">Involuntary Mental Hospitalizations</li>
-        <li class="list-group-item text-center">Juvenile Cases</li>
-        <li class="list-group-item text-center">Misdemeanor and Infractions Cases</li>
+        <li class="list-group-item text-center">County civil legal matters</li>
       </ul>
     </div>
     <!-- End Services -->
