--- a/_pages/dept/prosecutor/home.html
+++ b/_pages/dept/prosecutor/home.html
@@ -71,7 +71,7 @@ permalink: /prosecutor/
       </div>
       <ul class="list-group">
         <li class="list-group-item text-center">Felonies</li>
-        <li class="list-group-item text-center">Misdemeanor and Infractions Cases (State and County agencies</li>
+        <li class="list-group-item text-center">Misdemeanor and Infractions Cases (State and County agencies)</li>
         <li class="list-group-item text-center">Juvenile Cases</li>
         <li class="list-group-item text-center">Child Protection Cases</li>
         <li class="list-group-item text-center">Involuntary Mental Hospitalizations</li>
