Added commissions page.

--- a/_pages/commissions/home.html
+++ b/_pages/commissions/home.html
@@ -2,11 +2,192 @@
 layout: page
 title: Commissions
 permalink: /commissions/
+tree: true
 ---
 
 <div class="row">
   <div class="col-md-offset-1 col-md-10">
     <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+      <!-- BOCG -->
+      <div class="panel panel-default">
+        <div class="panel-heading" role="tab" id="headingBOCG">
+          <h4 class="panel-title">
+            <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseBOCG" aria-expanded="false" aria-controls="collapseBOCG">
+              Board of Community Guardians (BOCG)
+            </a>
+          </h4>
+        </div>
+        <div id="collapseBOCG" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingBOCG">
+          <div class="panel-body">
+            <div class="col-md-8">
+              <p>
+                The purpose of the BOCG is to provide legal guardianship for adult residents of Latah County who have been deemed legally incapacitated by the court, have very limited funds, and no family members or friends who are able to help. Board meetings are held on the 2nd Friday of each month.
+              </p>
+              <p>
+                The BOCG is currently seeking new members. Members must be at least 18 years of age and must agree to completion of a fingerprint based criminal background check.
+              </p>
+              <p>
+                If you are interested in serving your community through volunteer work with the Latah County Board of Community Guardians, please complete a <a href="" target="_blank">Volunteer Application</a>. Applications may be submitted to the BOCG via postal mail or email.
+                <!--Todo | Needs direct download link to the volunteer Application -->
+              </p>
+            </div>
+            <div class="col-md-4">
+              <div class="panel panel-default">
+                <div class="panel-heading">
+                  <h3 class="panel-title"><strong>Contact:</strong></h3>
+                </div>
+                <div class="panel-body">
+                  <strong>Chairman:</strong><br />
+                  Liz Bryant<br />
+                  <strong>Email:</strong><br />
+                  <a href="mailto:latahbocg@gmail.com">latahbocg@gmail.com</a><br /> <!-- Todo | Needs to be obfuscated-->
+                  <strong>Address:</strong><br />
+                  P.O. Box 8637<br />
+                  Moscow, ID 83843<br />
+                  <strong>BOCG Representative:</strong><br />
+                  Bill Thompson<br />
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="panel panel-primary" id="agendas">
+            <div class="panel-heading" >
+              <h4 class="panel-title text-center">Agendas</h4>
+            </div>
+            <div class="list-group">
+              <div id="bocgAgendas"></div>
+            </div>
+            <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne" aria-expanded="false" style="height: 0px;">
+              <div class="list-group pre-scrollable">
+                <div id="agendas" class="list-group-item"></div>
+                <noscript>To view agendas please enable JavaScript or update your browser</noscript>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- LPC -->
+      <div class="panel panel-default">
+        <div class="panel-heading" role="tab" id="headingLPC">
+          <h4 class="panel-title">
+            <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseLPC" aria-expanded="false" aria-controls="collapseLPC">
+              Latah Preservation Commission
+            </a>
+          </h4>
+        </div>
+        <div id="collapseLPC" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingLPC">
+          <div class="panel-body">
+            <div class="col-md-8">
+              <p>
+                The Latah Preservation Commission works to preserve, promote, and educate the public about the historic physical fabric of Latah County, Idaho.
+              </p>
+              <p>
+                The Commission does this by submitting nominations to the National Register of Historic Places, installing smart signage at historic sites, conducting walking tours, writing informative brochures, printing flyers, designating national historic districts, and supporting Idaho’s heritage organizations.
+              </p>
+              <p>
+                The Latah Preservation Commission is a Certified Local Government (CLG) that receives funding from the National Park Service and Latah County.
+              </p>
+              <p>
+                We encourage and welcome all public participation at our regular meetings. Please find your local Commission member with the link on this page and the meeting notice with agenda.
+              </p>
+              <p>
+                We meet at 1:30 pm on the last Thursday of the month at the location specified in the meeting notice.
+              </p>
+            </div>
+            <div class="col-md-4">
+              <div class="panel panel-default">
+                <div class="panel-heading">
+                  <h3 class="panel-title"><strong>Contact:</strong></h3>
+                </div>
+                <div class="panel-body">
+                  <strong>Chair:</strong><br />
+									Sharon Harris<br />
+									<strong>Phone:</strong><br />
+									208-289-4622<br />
+                  <strong>Email:</strong><br />
+                  <a href="mailto:25skharris@gmail.com">25skharris@gmail.com</a><br /> <!-- Todo | Needs to be obfuscated-->
+                  <strong>BOCC Representative:</strong><br />
+									Luke Sprague<br />
+									<strong>Phone:</strong><br />
+									208-301-3528<br />
+                  <strong>Email:</strong><br />
+                  <a href="mailto:luke@historymint.com">luke@historymint.com</a> <!-- Todo | Needs to be obfuscated-->
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="panel panel-primary" id="agendas">
+            <div class="panel-heading" >
+              <h4 class="panel-title text-center">Agendas, Minutes, Documents</h4>
+            </div>
+            <div class="list-group">
+              <div id="lpcAgendas"></div>
+            </div>
+            <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne" aria-expanded="false" style="height: 0px;">
+              <div class="list-group pre-scrollable">
+                <div id="agendas" class="list-group-item"></div>
+                <noscript>To view agendas please enable JavaScript or update your browser</noscript>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Parks and Rec -->
+      <div class="panel panel-default">
+        <div class="panel-heading" role="tab" id="headingPRB">
+          <h4 class="panel-title">
+            <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapsePRB" aria-expanded="false" aria-controls="collapsePRB">
+              Parks &amp; Recreation Board
+            </a>
+          </h4>
+        </div>
+        <div id="collapsePRB" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingPRB">
+          <div class="panel-body">
+            <div class="col-md-8">
+              <p>
+                The board meetings are held the 2nd Thursday of each month from 4pm to 5pm in Room 2B of the Latah County Courthouse (unless otherwise posted).
+              </p>
+            </div>
+            <div class="col-md-4">
+              <div class="panel panel-default">
+                <div class="panel-heading">
+                  <h3 class="panel-title"><strong>Contact:</strong></h3>
+                </div>
+                <div class="panel-body">
+									<h4>Parks &amp; Rec Board</h4>
+                  <strong>Chairman:</strong><br />
+									Dan Leonard<br />
+									<strong>Phone:</strong><br />
+									(509) 332-8211<br />
+									<h4>Latah County Parks &amp; Rec</h4>
+                  <strong>Director:</strong><br />
+									Andrew Grant<br />
+									<strong>Phone:</strong><br />
+									(208) 883-5709<br />
+                  <strong>Location:</strong><br />
+									5168 Robinson Park Rd.<br />
+									Moscow, ID 83843
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="panel panel-primary" id="agendas">
+            <div class="panel-heading" >
+              <h4 class="panel-title text-center">Agendas, Minutes</h4>
+            </div>
+            <div class="list-group">
+              <div id="prbAgendas"></div>
+            </div>
+            <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne" aria-expanded="false" style="height: 0px;">
+              <div class="list-group pre-scrollable">
+                <div id="agendas" class="list-group-item"></div>
+                <noscript>To view agendas please enable JavaScript or update your browser</noscript>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Planning -->
       <div class="panel panel-default">
         <div class="panel-heading" role="tab" id="headingPlanning">
           <h4 class="panel-title">
@@ -50,8 +231,23 @@ permalink: /commissions/
               </div>
             </div>
           </div>
+          <div class="panel panel-primary" id="agendas">
+            <div class="panel-heading" >
+              <h4 class="panel-title text-center">Agendas, Minutes</h4>
+            </div>
+            <div class="list-group">
+              <div id="planningAgendas"></div>
+            </div>
+            <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne" aria-expanded="false" style="height: 0px;">
+              <div class="list-group pre-scrollable">
+                <div id="agendas" class="list-group-item"></div>
+                <noscript>To view agendas please enable JavaScript or update your browser</noscript>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
+      <!-- Zoning -->
       <div class="panel panel-default">
         <div class="panel-heading" role="tab" id="heading2">
           <h4 class="panel-title">
@@ -95,6 +291,61 @@ permalink: /commissions/
               </div>
             </div>
           </div>
+          <div class="panel panel-primary" id="agendas">
+            <div class="panel-heading" >
+              <h4 class="panel-title text-center">Agendas, Minutes</h4>
+            </div>
+            <div class="list-group">
+              <div id="zoningAgendas"></div>
+            </div>
+            <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne" aria-expanded="false" style="height: 0px;">
+              <div class="list-group pre-scrollable">
+                <div id="agendas" class="list-group-item"></div>
+                <noscript>To view agendas please enable JavaScript or update your browser</noscript>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- SWAC -->
+      <div class="panel panel-default">
+        <div class="panel-heading" role="tab" id="headingSWAC">
+          <h4 class="panel-title">
+            <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSWAC" aria-expanded="false" aria-controls="collapseSWAC">
+              Solid Waste Advisory Committee (SWAC)
+            </a>
+          </h4>
+        </div>
+        <div id="collapseSWAC" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSWAC">
+          <div class="panel-body">
+            <div class="col-md-8">
+              <p>
+                There is a Solid Waste Advisory Committee (SWAC) which consists of representatives from rural cities. This committee exists to communicate solid waste needs, alleviate problems and improve programs. They are committed to keeping solid waste costs down.
+              </p>
+              <p>
+                This committee is open to anyone who is interested and is solely an advisory committee. Meetings are held as needed, typically scheduled on the third Tuesday of the month at 5:30pm in the City Hall Council Chambers. Please call if you would like more information.
+              </p>
+            </div>
+            <div class="col-md-4">
+              <div class="panel panel-default">
+                <div class="panel-heading">
+                  <h3 class="panel-title"><strong>Contact:</strong></h3>
+                </div>
+                <div class="panel-body">
+									<strong>Phone:</strong><br />
+									(208) 883-5706<br />
+									<strong>Fax:</strong><br />
+									(208) 883-2280<br />
+									<strong>Email:</strong><br />
+									<a href="mailto:solidwaste@latah.id.us">solidwaste@latah.id.us<br />
+                  <strong>Location:</strong><br />
+									Latah County Courthouse<br />
+									<strong>BOCC Rep</strong>
+									Dave McGraw
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -122,3 +373,12 @@ permalink: /commissions/
     </div>
   </div>
 </div>
+
+
+<script type="text/javascript">
+	deptTree("bocgAgendas", "Com-BOCG")
+	deptTree("lpcAgendas", "Com-LPC")
+	deptTree("prbAgendas", "Com-PRB")
+	deptTree("planningAgendas", "Com-Planning")
+	deptTree("zoningAgendas", "Com-Zoning")
+</script>
