--- a/_pages/dept/district_court/home.html
+++ b/_pages/dept/district_court/home.html
@@ -82,6 +82,12 @@ permalink: /district_court/
               </p>
             </li>
             <li class="list-group-item">
+              <h4 class="list-group-item-heading">Online Payment Info</h4>
+              <p>
+                Ticket payments can be made online in the <a href="https://mycourts.idaho.gov/odysseyportal/" target="_blank" rel="noopener">Online Payment Portal</a>
+              </p>
+            </li>
+            <li class="list-group-item">
               <h4 class="list-group-item-heading">Dispute</h4>
               <p>
                 If the person charged wishes to deny the offense, they may do so either by checking the “not guilty” box on the reverse side of the citation and mailing it to the above address so it arrives no later than the appearance date, telephoning the Clerk's Office at (208) 883-2255 and entering their denial over the phone, or by stopping by the Clerk's Office at 522 South Adams and denying the charge. The clerk will then set a trial date and provide written notice to the defendant and the prosecutor.
