Updated jail roster link.

--- a/_pages/dept/sheriff/home.html
+++ b/_pages/dept/sheriff/home.html
@@ -109,7 +109,7 @@ news: true
 				<a href="civil.html" data-remote="false" class="list-group-item list-link text-center" data-toggle="modal" data-target="#myModal">Civil Office</a>
 				<a href="concealWeapons.html" data-remote="false" class="list-group-item list-link text-center" data-toggle="modal" data-target="#myModal">Concealed Weapons Licenses</a>
 				<a href="detention/" data-remote="false" class="list-group-item list-link text-center">Detention</a>
-				<a href="http://gis.latah.id.us/JailRoster/ListNames.aspx" class="list-group-item list-link text-center" target="_blank" rel="noopener">Jail Roster</a>
+				<a href="https://jail.latah.id.us/" class="list-group-item list-link text-center" target="_blank" rel="noopener">Jail Roster</a>
 				<a href="operations.html" data-remote="false" class="list-group-item list-link text-center" data-toggle="modal" data-target="#myModal">Operations</a>
 				<a href="emailNotification.html" data-remote="false" class="list-group-item list-link text-center" data-toggle="modal" data-target="#myModal">Press Release Notification Service</a>
 				<a href="records.html" data-remote="false" class="list-group-item list-link text-center" data-toggle="modal" data-target="#myModal">Records</a>
