--- a/_pages/dept/commissioners/home.html
+++ b/_pages/dept/commissioners/home.html
@@ -105,7 +105,7 @@ deptTree("comAgendas", "Commissioners")
 
 <script type="text/javascript">
 function downloadFileEx(filename){
-				var url = 'https://gis.latah.id.us/api/DownloadFileEx?filename=' + filename;
+				var url = 'https://api.latah.id.us/web/DownloadFileEx?filename=' + filename;
 				window.open(url);
 			}
 </script>
