--- a/_pages/dept/planning_building/GIS/home.html
+++ b/_pages/dept/planning_building/GIS/home.html
@@ -127,7 +127,7 @@ tree: true
 
   <script type="text/javascript">
     function downloadFileEx(p) {
-      var url = 'https://gis.latah.id.us/api/DownloadFileEx?filename=' + p;
+      var url = 'https://api.latah.id.us/web/DownloadFileEx?filename=' + p;
       window.open(url);
     }
   </script>
