--- a/_pages/dept/assessor/home.html
+++ b/_pages/dept/assessor/home.html
@@ -219,7 +219,7 @@ news: true
 
 <script type="text/javascript">
     function downloadFileEx(p) {
-      var url = 'https://gis.latah.id.us/api/DownloadFileEx?filename=' + p;
+      var url = 'https://api.latah.id.us/web/DownloadFileEx?filename=' + p;
       window.open(url);
     }
 </script>
