--- a/_pages/dept/treasurer/home.html
+++ b/_pages/dept/treasurer/home.html
@@ -107,7 +107,7 @@ tree: true
 //downloadFileEx - searchs for a file within a base dir
 function downloadFileEx(filename) {
     if (filename != null) {
-        var url = 'https://gis.latah.id.us/api/DownloadFileEx?filename=' + filename;
+        var url = 'https://api.latah.id.us/web/DownloadFileEx?filename=' + filename;
         window.open(url);
     }
 }
