moved fileDownloadEx to an include, removed the old plat map call.

--- a/_pages/dept/assessor/home.html
+++ b/_pages/dept/assessor/home.html
@@ -4,6 +4,7 @@ title: Assessor
 permalink: /assessor/
 tree: true
 news: true
+fileDownload: true
 ---
 
 <div class="row" id="infoRow">
@@ -218,8 +219,5 @@ news: true
 </script>
 
 <script type="text/javascript">
-    function downloadFileEx(p) {
-      var url = 'https://api.latah.id.us/web/DownloadFileEx?filename=' + p;
-      window.open(url);
-    }
+  downloadFileEx(param1)
 </script>
