--- a/_pages/dept/commissioners/home.html
+++ b/_pages/dept/commissioners/home.html
@@ -3,6 +3,7 @@ layout: page
 title: Commissioners
 permalink: /commissioners/
 tree: true
+fileDownload: true
 ---
 <div class="row">
   <div class="col-md-8">
@@ -104,8 +105,5 @@ deptTree("comAgendas", "Commissioners")
 </script>
 
 <script type="text/javascript">
-function downloadFileEx(filename){
-				var url = 'https://api.latah.id.us/web/DownloadFileEx?filename=' + filename;
-				window.open(url);
-			}
+  downloadFileEx(param1)
 </script>
