--- a/_pages/dept/planning_building/home.html
+++ b/_pages/dept/planning_building/home.html
@@ -4,6 +4,7 @@ title: Planning, Building and GIS
 permalink: /planning_building/
 calendar: true
 tree: true
+fileDownload: true
 ---
 
 <div class="row">
@@ -88,8 +89,5 @@ tree: true
 	deptTree("pbDir", "PlanningBuilding")
 </script>
 <script type="text/javascript">
-    function downloadFileEx(p) {
-        var url = 'https://api.latah.id.us/web/DownloadFileEx?filename=' + p;
-        window.open(url);
-    }
+	downloadFileEx(param1)
 </script>
