--- a/_pages/dept/sheriff/detention.html
+++ b/_pages/dept/sheriff/detention.html
@@ -2,6 +2,7 @@
 layout: page
 title: Detention
 permalink: /sheriff/detention/
+fileDownload: true
 ---
 
 <div class="row">
@@ -66,8 +67,5 @@ permalink: /sheriff/detention/
 {% include modalPopup.html %}
 
 <script type="text/javascript">
-function downloadFileEx(filename){
-				var url = 'https://api.latah.id.us/web/DownloadFileEx?filename=' + filename;
-				window.open(url);
-			}
+	downloadFileEx(param1)
 </script>
