--- a/_pages/dept/commissioners/home.html
+++ b/_pages/dept/commissioners/home.html
@@ -60,7 +60,7 @@ fileDownload: true
 				<a href="http://www.latah.id.us/mailman/listinfo/agendanotify" class="list-group-item list-link">Agenda Notifications</a>
 				<a href="#agendas" class="list-group-item list-link">Agendas</a>
 				<a href="#" class="list-group-item list-link" onclick="downloadFileEx('CommissionerDistricts.pdf'); return false;">Commissioner District Maps</a>
-				<a href="https://www.latah.id.us/elections/Commissioner%20Districts%20Moscow%2011by17.pdf" target="_blank" class="list-group-item list-link">City of Moscow Commissioner District Map</a>
+				<a href="#" class="list-group-item list-link" onclick="downloadFileEx('Commissioner Districts Moscow 11by17.pdf'); return false;">City of Moscow Commissioner District Map</a>				
       	<a href="/commissions/#laws" class="list-group-item list-link">Idaho Open Meeting Laws</a>
 				<a href="/assessor/" class="list-group-item list-link">Tax Exempt Property Information</a>				      	
 			</div>
