--- a/_pages/dept/planning_building/GIS/home.html
+++ b/_pages/dept/planning_building/GIS/home.html
@@ -32,7 +32,7 @@ fileDownload: true
             <!-- <img class="figure-img img-responsive rounded center-block" src="/img/gis1.jpg" alt="Subscription Map"> -->
             {% cloudinary /img/gis1.jpg class="figure-img img-responsive rounded center-block" width="200" alt="Subscription Map" %}
           </figure>
-          <a href="https://www.latah.id.us/latahview">
+          <a href="https://gis.latah.id.us/latahview">
             <figure class="col-md-6">
               <figcaption class="text-center" style="font-size: 1.5em">Historic Places</figcaption>
               <!-- <img class="figure-img img-responsive rounded center-block" src="/img/gis1.jpg" alt="Historic Places"> -->
