updated agenda notify link on commissioners page.

--- a/_pages/dept/commissioners/home.html
+++ b/_pages/dept/commissioners/home.html
@@ -57,7 +57,7 @@ fileDownload: true
 				<h4 class="panel-title text-center">Additional Information</h4>
 			</div>
   		<div class="list-group text-center">
-				<a href="http://www.latah.id.us/mailman/listinfo/agendanotify" class="list-group-item list-link">Agenda Notifications</a>
+				<a href="https://listmail.latah.id.us/mailman/listinfo/agendanotify" class="list-group-item list-link">Agenda Notifications</a>
 				<a href="#agendas" class="list-group-item list-link">Agendas</a>
 				<a href="#" class="list-group-item list-link" onclick="downloadFileEx('CommissionerDistricts.pdf'); return false;">Commissioner District Maps</a>
 				<a href="#" class="list-group-item list-link" onclick="downloadFileEx('Commissioner Districts Moscow 11by17.pdf'); return false;">City of Moscow Commissioner District Map</a>				
