Changed Commissioners folder name.

--- a/_pages/dept/commissioners/home.html
+++ b/_pages/dept/commissioners/home.html
@@ -101,6 +101,6 @@ fileDownload: true
 </div><!-- row -->
 
 <script type="text/javascript">
-deptTree("comAgendas", "Commissioners")
+deptTree("comAgendas", "BOCC")
 </script>
 
