Some changes implemented for Kara, see issue #116.

--- a/_pages/commissions/home.html
+++ b/_pages/commissions/home.html
@@ -52,7 +52,7 @@ tree: true
           </div>
           <div class="panel panel-primary" id="agendas">
             <div class="panel-heading" >
-              <h4 class="panel-title text-center">Agendas</h4>
+              <h4 class="panel-title text-center">Agendas, Minutes, Documents</h4>
             </div>
             <div class="list-group">
               <div id="bocgAgendas"></div>
@@ -204,7 +204,8 @@ tree: true
               </p>
               <p>
                 To submit general comments to the Planning Commission, please e-mail <a href="mailto:mfuson@latah.id.us">Michelle Fuson</a>. To submit comments regarding a public hearing before the Zoning Commission, please refer to the public hearing packet below on how to submit comments.
-                To receive e-mails with links to new agendas for the Planning and Zoning Commissions please subscribe <a href="http://www.latah.id.us/mailman/listinfo/planzone">here</a>.
+                To see the current agendas and minutes click <a href="/planning_building/#agendas">here</a>.
+                To receive e-mails with links to new agendas for the Planning and Zoning Commissions please subscribe <a href="https://listmail.latah.id.us/mailman/listinfo/planzone">here</a>.
               </p>
             </div>
             <div class="col-md-4">
@@ -231,20 +232,6 @@ tree: true
               </div>
             </div>
           </div>
-          <div class="panel panel-primary" id="agendas">
-            <div class="panel-heading" >
-              <h4 class="panel-title text-center">Agendas, Minutes</h4>
-            </div>
-            <div class="list-group">
-              <div id="planningAgendas"></div>
-            </div>
-            <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne" aria-expanded="false" style="height: 0px;">
-              <div class="list-group pre-scrollable">
-                <div id="agendas" class="list-group-item"></div>
-                <noscript>To view agendas please enable JavaScript or update your browser</noscript>
-              </div>
-            </div>
-          </div>
         </div>
       </div>
       <!-- Zoning -->
@@ -264,6 +251,7 @@ tree: true
               </p>
               <p>
                 To submit general comments to the Planning Commission, please e-mail <a href="mailto:mfuson@latah.id.us">Michelle Fuson</a>. To submit comments regarding a public hearing before the Zoning Commission, please refer to the public hearing packet below on how to submit comments.
+                To see the current agendas and minutes click <a href="/planning_building/#agendas">here</a>.
                 To receive e-mails with links to new agendas for the Planning and Zoning Commissions please subscribe <a href="http://www.latah.id.us/mailman/listinfo/planzone">here</a>.
               </p>
             </div>
@@ -290,21 +278,7 @@ tree: true
                 </div>
               </div>
             </div>
-          </div>
-          <div class="panel panel-primary" id="agendas">
-            <div class="panel-heading" >
-              <h4 class="panel-title text-center">Agendas, Minutes</h4>
-            </div>
-            <div class="list-group">
-              <div id="zoningAgendas"></div>
-            </div>
-            <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne" aria-expanded="false" style="height: 0px;">
-              <div class="list-group pre-scrollable">
-                <div id="agendas" class="list-group-item"></div>
-                <noscript>To view agendas please enable JavaScript or update your browser</noscript>
-              </div>
-            </div>
-          </div>
+          </div>          
         </div>
       </div>
       <!-- SWAC -->
@@ -378,7 +352,5 @@ tree: true
 <script type="text/javascript">
 	deptTree("bocgAgendas", "Com-BOCG")
 	deptTree("lpcAgendas", "Com-LPC")
-	deptTree("prbAgendas", "Com-PRB")
-	deptTree("planningAgendas", "Com-Planning")
-	deptTree("zoningAgendas", "Com-Zoning")
+	deptTree("prbAgendas", "Com-PRB")	
 </script>
