--- a/_pages/dept/planning_building/home.html
+++ b/_pages/dept/planning_building/home.html
@@ -44,7 +44,7 @@ fileDownload: true
 <!-- Handouts and Notices -->
 <div class="row">
 	<div class="col-md-6">
-		<div class="panel panel-primary">
+		<div class="panel panel-primary" id="agendas">
 			<div class="panel-heading">
 				<h3 class="panel-title text-center"> Codes &amp; Applications &amp; Handouts</h4>
 			</div>
