--- a/_pages/dept/parks_rec/home.html
+++ b/_pages/dept/parks_rec/home.html
@@ -158,11 +158,11 @@ permalink: /parks_rec/
     <!-- Services -->
     <div class="panel panel-primary">
       <div class="panel-heading">
-        <h3 class="panel-title text-center">Our Services</h3>
+        <h3 class="panel-title text-center">Additional Information</h3>
       </div>
-      <ul class="list-group text-center">
-        <li class="list-group-item">Parks Management</li>
-      </ul>
+      <div class="list-group text-center">
+        <a href="/commissions" class="list-group-item list-link">Parks &amp; Recreaction Board</a>
+      </div>
     </div>
     <!-- End Services -->
   </div>
