Fixed URL in zoning commission subscribe to.

--- a/_pages/commissions/home.html
+++ b/_pages/commissions/home.html
@@ -252,7 +252,7 @@ tree: true
               <p>
                 To submit general comments to the Planning Commission, please e-mail <a href="mailto:mfuson@latah.id.us">Michelle Fuson</a>. To submit comments regarding a public hearing before the Zoning Commission, please refer to the public hearing packet below on how to submit comments.
                 To see the current agendas and minutes click <a href="/planning_building/#agendas">here</a>.
-                To receive e-mails with links to new agendas for the Planning and Zoning Commissions please subscribe <a href="http://www.latah.id.us/mailman/listinfo/planzone">here</a>.
+                To receive e-mails with links to new agendas for the Planning and Zoning Commissions please subscribe <a href="http://listmail.latah.id.us/mailman/listinfo/planzone">here</a>.
               </p>
             </div>
             <div class="col-md-4">
